# video-common

./: .gitignore  97-myriad-usbboot.rules  Dockerfile.openvino  Dockerfile.videocommon  docker-compose.yml  fpga_env.sh  install_openvino_fpga.sh  install_pip_requirements.py
UDFLoader/: CMakeLists.txt  README.md
UDFLoader/UDFLoader/src/: frame.cpp
UDFLoader/cmake/: UDFLoaderConfig.cmake.in  libeiiudfloader.pc.in
UDFLoader/examples/: CMakeLists.txt  example.py  load_example.cpp  native_example.cpp
UDFLoader/include/eii/udf/: base_udf.h  frame.h  loader.h  native_udf_handle.h  python_udf_handle.h  raw_base_udf.h  raw_udf_handle.h  udf_handle.h  udf_manager.h  udfretcodes.h
UDFLoader/include/eis/udf/: base_udf.h  frame.h  (+4 more)
UDFLoader/src/: base_udf.cpp  frame.cpp  loader.cpp  native_udf_handle.cpp  python_udf_handle.cpp  raw_base_udf.cpp  raw_udf_handle.cpp  udf_handle.cpp  udf_manager.cpp
UDFLoader/src/cython/: udf.pyx
UDFLoader/tests/: CMakeLists.txt  frame_tests.cpp  test_udf_load_native_resize.json  test_udf_load_raw_native_same_frame.json  test_udf_mgr_same_frame.json  udfloader_tests.cpp
UDFLoader/tests/native_tests/: native_udf.cpp  raw_native_udf.cpp  same_frame.cpp
UDFLoader/tests/py_tests/: modify.py  same_frame.py
Util/: log.py  util.go  util.py
Util/Tpm/: tpmutil.go
Util/cpuid/: Makefile  cpuid-check.c  cpuid-check.h  cpuid.go
Util/crypto/: encrypt_decrypt.go  encrypt_decrypt.py
Util/influxdb/: influxDBHelper.go
Util/test/: influxDBHelperTest.go
dockerignores/: .dockerignore  .dockerignore.common  .dockerignore.ct  .dockerignore.dist_libs  .dockerignore.provision
libs/: base_classifier.py  base_filter.py  log.py
libs/UDFLoader/: .gitignore  CMakeLists.txt  README.md
libs/UDFLoader/examples/: CMakeLists.txt  config.json  example.py  load_example.cpp  native_example.cpp
libs/UDFLoader/src/: base_udf.cpp  frame.cpp  loader.cpp  native_udf_handle.cpp  python_udf_handle.cpp  udf_handle.cpp  udf_manager.cpp
libs/UDFLoader/tests/: CMakeLists.txt  frame_tests.cpp  test_config.json  udfloader_tests.cpp
libs/common/go/: util.go
libs/common/influxdb/: influxDBHelper.go
libs/common/py/: util.py
openvino/: Dockerfile.openvino
udfs/: HOWTO_GUIDE_FOR_WRITING_UDF.md  README.md
udfs/native/: CMakeLists.txt
udfs/native/dummy/: CMakeLists.txt  dummy.cpp
udfs/native/fps/: CMakeLists.txt  fps.cpp  fps.h
udfs/native/raw_dummy/: CMakeLists.txt  raw_dummy.cpp
udfs/native/realsense_tracking/: CMakeLists.txt  realsense_tracking.cpp
udfs/native/resize/: CMakeLists.txt  resize.cpp
udfs/native/safety_gear_demo/: CMakeLists.txt  safety_gear_demo.cpp  safety_gear_demo.h
udfs/native/sample_realsense/: CMakeLists.txt  sample_realsense.cpp
udfs/python/: dummy.py  jupyter_connector.py  multi_frame_dummy.py
udfs/python/pcb/: README.md  pcb_classifier.py  pcb_filter.py
udfs/python/safety_gear/: safety_classifier.py
udfs/python/sample_classification/: multi_class_classifier.py
udfs/python/sample_onnx/: onnx_udf.py
(+16 files in other folders)
